--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- sessao do cabeçalho -->
     <header id="cabecalho">
         <div class="logo">
-            <h1>BrisaSerena</h1>
+            <h1>Brisa Serena</h1>
             <a href="./index.html"><img src="./src/img/sub_logo-removebg-preview.png" " alt=" logo"></a>
         </div>
 
@@ -22,8 +22,8 @@
             <a href="*">Biquínis</a>
             <a href="*">Conjuntos</a>
             <a href="*">Ofertas</a>
-            <a href="*">Carrinho</a>
             <a href="*">Mais vendidos</a>
+            <a href="*">Quem somos nós</a>
 
         </div>
 
