adiçao-de-itens

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <!-- sessao do cabeçalho -->
     <header id="cabecalho">
         <div class="logo">
-            <h1>Brisa Serena</h1>
-            <a href="./index.html"><img src="./src/img/sub_logo-removebg-preview.png" " alt=" logo"></a>
-        </div>
+            <div class="img">
+                <a href="./index.html"><img src="./src/img/sub_logo-removebg-preview.png" " alt=" logo"></a>
+            </div>
+            <div class="texto">
+                <h1>Brisa Serena</h1>
+            </div>
 
+
+
+        </div>
         <div id="navegacao">
 
             <a href="*">Biquínis</a>
@@ -26,6 +32,8 @@
             <a href="*">Quem somos nós</a>
 
         </div>
+
+
 
         <div id="log">
             <a href="#" onclick="abrirModal('login')">Entrar</a>
@@ -38,24 +46,36 @@
     <section>
         <div id="catalogo">
 
-            <div class="produto">
-                <a href=""><img src="./src/img/biquini luiza azul.jpg" alt="Biquíni Luiza Azul">
-                    <p>Biquíni Luiza Azul - R$ 75,00</p>
-                </a>
-            </div>
+            <section>
+                <h1> Mais vendidos</h1>
+                <div class="produto">
+                    <a href="">
+                         <img src="./src/img/modelo biquini fita azul.jpg" alt="">
+                         <img src="./src/img/modelo biquini fita azul 2.jpg" alt=""> 
+                         <img src="./src/img/modelo biquini fita azul 3.jpg" alt=""> 
+                    </a>
+                  <h4>Biquíni fita</h4>
+                </div>
+            </section>
 
-            <div class="produto">
-                <a href=""><img src="./src/img/biquini luiza marrom.jpg" alt="Biquíni Luiza Marrom">
-                    <p>Biquíni Luiza Marrom - R$ 75,00</p>
-                </a>
-            </div>
+            <section>
+                
+                <div class="produto">
+                    <a href="">
+                        <!-- <img src="./src/img/biquini luiza marrom.jpg" alt="Biquíni Luiza Marrom"> -->
+                        <p>Biquíni Luiza Marrom - R$ 75,00</p>
+                    </a>
+                </div>
+            </section>
 
-            <div class="produto">
-                <a href="">
-                    <img src="./src/img/biquini luiza preto.jpg" alt="Biquíni Luiza Preto">
-                    <p>Biquíni Luiza Preto - R$ 75,00</p>
-                </a>
-            </div>
+            <section>
+                <div class="produto">
+                    <a href="">
+                        <!-- <img src="./src/img/biquini luiza preto.jpg" alt="Biquíni Luiza Preto"> -->
+                        <p>Biquíni Luiza Preto - R$ 75,00</p>
+                    </a>
+                </div>
+            </section>
 
         </div>
     </section>
@@ -63,7 +83,7 @@
     <section>
         <div id="lateral">
 
-            
+
         </div>
     </section>
 
