uniao conjunto e catalogo

--- a/conjuntos.html
+++ b/conjuntos.html
@@ -7,44 +7,54 @@
     <title>Brisa Serena</title>
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/conj.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
-    
-    <header id="cabecalho">
+      <!-- sessao do cabeçalho -->
+      <header id="cabecalho">
         <div class="logo">
-            <h1>Brisa Serena</h1>
-            <a href="./index.html">
-                <img src="./src/img/sub_logo-removebg-preview.png" alt="Logo Brisa Serena">
-            </a>
+            <div class="img">
+                <a href="./index.html"><img src="./src/img/sub_logo-removebg-preview.png" " alt=" logo"></a>
+            </div>
+            <div class="texto">
+                <h1>Brisa Serena</h1>
+            </div>
+
+
+
+        </div>
+        <div id="navegacao">
+
+            <a href="*">Biquínis</a>
+            <a href="./conjuntos.html">Conjuntos</a>
+            <a href="*">Ofertas</a>
+            <a href="*">Mais vendidos</a>
+            <a href="*">Quem somos nós</a>
+
         </div>
 
-        <nav id="navegacao">
-            <a href="#">Biquínis</a>
-            <a href="conjuntos.html" class="active">Conjuntos</a>
-            <a href="#">Ofertas</a>
-            <a href="#">Mais vendidos</a>
-            <a href="#">Quem somos nós</a>
-        </nav>
+
 
         <div id="log">
             <a href="#" onclick="abrirModal('login')">Entrar</a>
             <a href="#" onclick="abrirModal('cadastro')">Cadastrar-se</a>
         </div>
-    </header>
 
+    </header>
+    
     <!-- CATÁLOGO DE CONJUNTOS -->
-    <main id="catalogo">
+    <main id="conjuntos">
         <!-- CONJUNTO LILI -->
         <section class="colecao">
             <h1>Conjunto Lili</h1>
             <div class="linha-produtos">
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lili laranja.jpg" alt="Conjunto Lili Laranja">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lili preto.jpg" alt="Conjunto Lili Preto">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lili rosa.jpg" alt="Conjunto Lili Rosa">
                 </div>
             </div>
@@ -54,13 +64,13 @@
         <section class="colecao">
             <h1>Conjunto Lolla</h1>
             <div class="linha-produtos">
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lolla azul.jpg" alt="Conjunto Lolla Azul">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lolla marrom.jpg" alt="Conjunto Lolla Marrom">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto lolla rosa.jpg" alt="Conjunto Lolla Rosa">
                 </div>
             </div>
@@ -70,13 +80,13 @@
         <section class="colecao">
             <h1>Conjunto Uane</h1>
             <div class="linha-produtos">
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto uane branco.jpg" alt="Conjunto Uane Branco">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto uane preto.jpg" alt="Conjunto Uane Preto">
                 </div>
-                <div class="produto">
+                <div class="produto-conjuntos">
                     <img src="./src/img/conjunto uane roxo.jpg" alt="Conjunto Uane Roxo">
                 </div>
             </div>
