--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Brisa Serena</title>
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         <div id="navegacao">
 
             <a href="*">Biquínis</a>
-            <a href="*">Conjuntos</a>
+            <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
             <a href="*">Mais vendidos</a>
             <a href="*">Quem somos nós</a>
