--- a/Biquinis.html
+++ b/Biquinis.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="src/css/biquinis.css">
     <link rel="stylesheet" href="src/css/cor-filtros.css">
+    
 </head>
 
 <body>
@@ -28,11 +29,10 @@
         </div>
         <div id="navegacao">
 
-            <a href="Biquinis.html" target="_self">Biquínis</a>
-            <a href="*">Conjuntos</a>
+            <a href="./Biquinis.html" target="_self">Biquínis</a>
+            <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
             <a href="*">Mais vendidos</a>
-            <a href="*">Quem somos nós</a>
 
         </div>
 
