--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div id="navegacao">
 
-            <a href="*">Biquínis</a>
+            <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
             <a href="*">Mais vendidos</a>
