adição-mais-vendido

--- a/Biquinis.html
+++ b/Biquinis.html
@@ -27,14 +27,15 @@
 
 
         </div>
-        <div id="navegacao">
+        <nav id="navegacao">
 
-            <a href="./Biquinis.html" target="_self">Biquínis</a>
+            <a href="./index.html">Home</a>
+            <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
-            <a href="*">Mais vendidos</a>
+            <a href="./maisvendidos.html">Mais vendidos</a>
 
-        </div>
+        </nav>
 
 
 
