--- a/conjuntos.html
+++ b/conjuntos.html
@@ -23,15 +23,15 @@
 
 
         </div>
-        <div id="navegacao">
+        <nav id="navegacao">
 
-            <a href="*">Biquínis</a>
+            <a href="./index.html">Home</a>
+            <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
-            <a href="*">Mais vendidos</a>
-            <a href="*">Quem somos nós</a>
+            <a href="./maisvendidos.html">Mais vendidos</a>
 
-        </div>
+        </nav>
 
 
 
