--- a/maisvendidos.html
+++ b/maisvendidos.html
@@ -25,15 +25,15 @@
 
 
         </div>
-        <div id="navegacao">
+        <nav id="navegacao">
 
+            <a href="./index.html">Home</a>
             <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
             <a href="*">Ofertas</a>
             <a href="./maisvendidos.html">Mais vendidos</a>
 
-
-        </div>
+        </nav>
 
 
 
