--- a/conjuntos.html
+++ b/conjuntos.html
@@ -42,36 +42,41 @@
 
     </header>
     
-    <!-- CATÁLOGO DE CONJUNTOS -->
-    <main id="conjuntos">
+   <!-- CATÁLOGO DE CONJUNTOS -->
+    <main id="catalogo">
         <!-- CONJUNTO LILI -->
         <section class="colecao">
             <h1>Conjunto Lili</h1>
             <div class="linha-produtos">
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lili laranja.jpg" alt="Conjunto Lili Laranja">
+                    <p>Conjunto Lili - Laranja</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lili preto.jpg" alt="Conjunto Lili Preto">
+                    <p>Conjunto Lili - Preto</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lili rosa.jpg" alt="Conjunto Lili Rosa">
+                    <p>Conjunto Lili - Rosa</p>
                 </div>
             </div>
         </section>
-
         <!-- CONJUNTO LOLLA -->
         <section class="colecao">
             <h1>Conjunto Lolla</h1>
             <div class="linha-produtos">
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lolla azul.jpg" alt="Conjunto Lolla Azul">
+                    <p>Conjunto Lolla - Azul</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lolla marrom.jpg" alt="Conjunto Lolla Marrom">
+                    <p>Conjunto Lolla - Marrom</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto lolla rosa.jpg" alt="Conjunto Lolla Rosa">
+                    <p>Conjunto Lolla - Rosa</p>
                 </div>
             </div>
         </section>
@@ -80,14 +85,17 @@
         <section class="colecao">
             <h1>Conjunto Uane</h1>
             <div class="linha-produtos">
-                <div class="produto-conjuntos">
-                    <img src="./src/img/conjunto uane branco.jpg" alt="Conjunto Uane Branco">
+                <div class="produto">
+                    <a href=""><img src="./src/img/conjunto uane branco.jpg" alt="Conjunto Uane Branco"></a>
+                    <p>Conjunto Uane - Branco</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto uane preto.jpg" alt="Conjunto Uane Preto">
+                    <p>Conjunto Uane - Preto</p>
                 </div>
-                <div class="produto-conjuntos">
+                <div class="produto">
                     <img src="./src/img/conjunto uane roxo.jpg" alt="Conjunto Uane Roxo">
+                    <p>Conjunto Uane - Roxo</p>
                 </div>
             </div>
         </section>
