tema-claro-escuro

--- a/conjuntos.html
+++ b/conjuntos.html
@@ -33,6 +33,16 @@
 
         </nav>
 
+        <div class="tema">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="mudanca" for="chk">
+              <img src="./src/img/lua.png" alt="">
+              <img src="./src/img/sun-line.png" alt="">
+              <div class="ball"></div>
+            </label>
+          </div>
+          
+      
 
 
         <div id="log">
@@ -100,5 +110,7 @@
             </div>
         </section>
     </main>
+
+    <script src="./script.js"></script>
 </body>
 </html>
