--- a/maisvendidos.html
+++ b/maisvendidos.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="src/css/maisvendidos.css">
+    <link rel="stylesheet" href="./src/css/cabecalho.css">
 
 </head>
 
@@ -35,6 +36,14 @@
 
 
         </nav>
+        <div class="tema">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="mudanca" for="chk">
+              <img src="./src/img/lua.png" alt="">
+              <img src="./src/img/sun-line.png" alt="">
+              <div class="ball"></div>
+            </label>
+          </div>
 
 
 
@@ -99,6 +108,6 @@
             </div>
         </div>
     </section>
-    
+    <script src="script.js"></script>
     </body>
     </html>
