--- a/Ofertas.html
+++ b/Ofertas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/Ofertas.css">
+    <link rel="stylesheet" href="./src/css/cabecalho.css">
 </head>
 <body>
     <header id="cabecalho">
@@ -29,6 +30,16 @@
             <a href="./maisvendidos.html">Mais vendidos</a>
 
         </nav>
+
+        <div class="tema">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="mudanca" for="chk">
+              <img src="./src/img/lua.png" alt="">
+              <img src="./src/img/sun-line.png" alt="">
+              <div class="ball"></div>
+            </label>
+          </div>
+
         <div>
             <a href="" class="btn btn--promo">Promoção</a>
           </div>
@@ -114,6 +125,6 @@
   </section>
 
 
-
+  <script src="script.js"></script>
     </body>
 </html>
