--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="./index.html">Home</a>
             <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
-            <a href="*">Ofertas</a>
+            <a href="./Ofertas.html">Ofertas</a>
             <a href="./maisvendidos.html">Mais vendidos</a>
 
         </nav>
@@ -59,7 +59,7 @@
     <section>
         <div id="catalogo">
             <section class="enfase">
-                <h1><a href="">Ofertas</a></h1>
+                <h1><a href="./Ofertas.html">Ofertas</a></h1>
                 <div class="produtos">
                     <div class="produto">
                          <a href="">
