--- a/maisvendidos.html
+++ b/maisvendidos.html
@@ -31,7 +31,7 @@
             <a href="./index.html">Home</a>
             <a href="./Biquinis.html">Biquínis</a>
             <a href="./conjuntos.html">Conjuntos</a>
-            <a href="*">Ofertas</a>
+            <a href="./Ofertas.html">Ofertas</a>
             <a href="./maisvendidos.html">Mais vendidos</a>
 
 
