--- a/conjuntos.html
+++ b/conjuntos.html
@@ -59,16 +59,22 @@
             <h1>Conjunto Lili</h1>
             <div class="linha-produtos">
                 <div class="produto">
+                    <a href="ConjuntoLililaranja.html">
                     <img src="./src/img/conjunto lili laranja.jpg" alt="Conjunto Lili Laranja">
                     <p>Conjunto Lili - Laranja</p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoLilipreto.html">
                     <img src="./src/img/conjunto lili preto.jpg" alt="Conjunto Lili Preto">
                     <p>Conjunto Lili - Preto</p>
+                </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoLilirosa.html">
                     <img src="./src/img/conjunto lili rosa.jpg" alt="Conjunto Lili Rosa">
                     <p>Conjunto Lili - Rosa</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -77,16 +83,22 @@
             <h1>Conjunto Lolla</h1>
             <div class="linha-produtos">
                 <div class="produto">
+                    <a href="ConjuntoLollaazul.html">
                     <img src="./src/img/conjunto lolla azul.jpg" alt="Conjunto Lolla Azul">
                     <p>Conjunto Lolla - Azul</p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoLollamarrom.html">
                     <img src="./src/img/conjunto lolla marrom.jpg" alt="Conjunto Lolla Marrom">
                     <p>Conjunto Lolla - Marrom</p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoLollarosa.html">
                     <img src="./src/img/conjunto lolla rosa.jpg" alt="Conjunto Lolla Rosa">
                     <p>Conjunto Lolla - Rosa</p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -96,16 +108,22 @@
             <h1>Conjunto Uane</h1>
             <div class="linha-produtos">
                 <div class="produto">
-                    <a href=""><img src="./src/img/conjunto uane branco.jpg" alt="Conjunto Uane Branco"></a>
+                    <a href="ConjuntoUanebranco.html">
+                    <img src="./src/img/conjunto uane branco.jpg" alt="Conjunto Uane Branco">
                     <p>Conjunto Uane - Branco</p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoUanepreto.html">
                     <img src="./src/img/conjunto uane preto.jpg" alt="Conjunto Uane Preto">
                     <p>Conjunto Uane - Preto</p>
+                    </a>
                 </div>
                 <div class="produto">
+                    <a href="ConjuntoUaneroxo.html">
                     <img src="./src/img/conjunto uane roxo.jpg" alt="Conjunto Uane Roxo">
                     <p>Conjunto Uane - Roxo</p>
+                    </a>
                 </div>
             </div>
         </section>
