--- a/cadastro.html
+++ b/cadastro.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro</title>
 </head>
-<link rel="stylesheet" href="Cadastro 2.css">
+<link rel="stylesheet" href="./src/css/Cadastro 2.css">
 <body>
     <div id="cadastro">
         <form action="" method="post">
@@ -25,7 +25,7 @@
         <input type="password" name="password" id="password" placeholder="Senha" max="8" required>
       </p>
       <p>
-        <a href="Trabalho.html"><input type="submit" name="submit" id="submit" value="Cadastrar">
+        <a href="./index.html"><input type="submit" name="submit" id="submit" value="Cadastrar">
       </p></a>
       <p class="link">
         Ja tem conta?
