--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           
 
         <div id="log">
-            <a href="#" onclick="abrirModal('login')">Entrar</a>
-            <a href="#" onclick="abrirModal('cadastro')">Cadastrar-se</a>
+            <a href="./kaka.html" onclick="abrirModal('login')">Entrar</a>
+            <a href="./cadastro.html" onclick="abrirModal('cadastro')">Cadastrar-se</a>
         </div>
 
     </header>
