--- a/kaka.html
+++ b/kaka.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login JS</title>
 
-   <link rel="stylesheet" href="login.css">
+   <link rel="stylesheet" href="./src/css/login.css">
 
 </head>
 <body class="darkmode">
