--- a/Biquinis.html
+++ b/Biquinis.html
@@ -179,14 +179,14 @@
             <div class="peças">
                 <a href="BiquíniBronzebranco.html">
                     <img src="src/img/Biquíni Bronze branco.jpg" alt="Biquíni Bronze Branco">
-                    <p>Biquíni Bronze Branco - R$ 80,00</p>
+                    <p>Biquíni Bronze Branco - R$ 65,00</p>
                 </a>
             </div>
             
             <div class="peças">
-                <a href="BiquíniBronzepreto.htmll">
+                <a href="BiquíniBronzepreto.html">
                     <img src="src/img/Biquíni Bronze preto.jpg" alt="Biquíni Bronze preto">
-                    <p>Biquíni Bronze Preto - R$ 80,00</p>
+                    <p>Biquíni Bronze Preto - R$ 65,00</p>
                 </a>
             </div>
             
