--- a/BiquíniBronzebranco.html
+++ b/BiquíniBronzebranco.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="src/css/biquinis.css">
     <link rel="stylesheet" href="src/css/cor-filtros.css">
-    <link rel="stylesheet" href="src/css/compras.css">   
+    <link rel="stylesheet" href="./src/css/compras.css"> 
+    <link rel="stylesheet" href="./src/css/style.css"> 
+    <link rel="stylesheet" href="./src/css/cabecalho.css"> 
 </head>
 <body>
         <!-- sessao do cabeçalho -->
@@ -32,6 +34,14 @@
                 <a href="./maisvendidos.html">Mais vendidos</a>
                 
             </nav>  
+            <div class="tema">
+                <input type="checkbox" class="checkbox" id="chk" />
+                <label class="mudanca" for="chk">
+                  <img src="./src/img/lua.png" alt="">
+                  <img src="./src/img/sun-line.png" alt="">
+                  <div class="ball"></div>
+                </label>
+              </div>
             </header>
             <br>
 
@@ -68,6 +78,6 @@
                     </a>
                 </div>
             </section>
-                 
+            <script src="script.js"></script>
 </body>
 </html>
