--- a/BiquíniFioDuplopreto.html
+++ b/BiquíniFioDuplopreto.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="src/css/biquinis.css">
     <link rel="stylesheet" href="src/css/cor-filtros.css">
     <link rel="stylesheet" href="src/css/compras.css">
-    <link rel="stylesheet" href="src/css/compras.css">      
+    <link rel="stylesheet" href="./src/css/style.css"> 
+    <link rel="stylesheet" href="./src/css/cabecalho.css">     
 </head>
 <body>
         <!-- sessao do cabeçalho -->
