--- a/ConjuntoLollamarrom.html
+++ b/ConjuntoLollamarrom.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="src/css/biquinis.css">
     <link rel="stylesheet" href="src/css/cor-filtros.css">
-    <link rel="stylesheet" href="src/css/compras.css">   
+    <link rel="stylesheet" href="src/css/compras.css">
+    <link rel="stylesheet" href="./src/css/style.css"> 
+    <link rel="stylesheet" href="./src/css/cabecalho.css">    
 </head>
 <body>
         <!-- sessao do cabeçalho -->
