--- a/ConjuntoUaneroxo.html
+++ b/ConjuntoUaneroxo.html
@@ -34,6 +34,14 @@
                 <a href="./maisvendidos.html">Mais vendidos</a>
                 
             </nav>  
+        <div class="tema">
+            <input type="checkbox" class="checkbox" id="chk" />
+            <label class="mudanca" for="chk">
+              <img src="./src/img/lua.png" alt="">
+              <img src="./src/img/sun-line.png" alt="">
+              <div class="ball"></div>
+            </label>
+          </div>
             </header>
 
 
